--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-     "predeploy": "npm run build",
-     "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview" 
-     
+    "preview": "vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
@@ -21,6 +20,7 @@
     "@tailwindcss/cli": "^4.1.10",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
+    "formik": "^2.4.6",
     "generate-react-cli": "^8.4.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
